JEDIT 3.2 VERSION HISTORY

* Version 3.2pre10

+ Enhancements

- Documentation updates
- The jedit.spec file for creating the Linux RPM package can now be used
  to compile and build jEdit from scratch
- Improved RPM spec syntax highlighting
- Read-only flag is automatically said when loading files from read-only
  filesystems, like the Archive plugin VFS

+ Bug Fixes

- C+. and C+, bug fix, again
- Help viewer tree would should tooltips in wrong place

+ API Changes

- BeanShell.eval() no longer creates a new namespace
- jEdit.openFile(View,String,String,boolean,boolean) deprecated
  jEdit.openFile(View,String,String,boolean,boolean,Hashtable) depreacted
  The 'readOnly' parameter should no longer be specified. Use
  jEdit.openFile(View,String,String,boolean,Hashtable) instead.
- Most plugins probably use openFile(View,String), which is still the
  same as ever.

* Version 3.2pre9

+ New Features

- Keys can now be bound to letter keys without modifiers; eg you can
  bind a macro to '>' that in HTML mode inserts the appropriate closing
  tag automatically. Note that the actual character is not inserted, so
  the macro would need to insert '>' first itself.
- 'Make Bug Report' macro (John Gellene)

+ Enhancements

- Documentation updates
- Improved Python syntax highlighting (Ollie Rutherfurd)

+ Bug Fixes

- Fixed a few bugs in the shortcuts option pane (Dirk Moebius)
- Fixed typo in a tip of the day
- If the text area was too small, it would report a negative number of
  visible lines, which caused problems
- Disabled non-working persistent splits feature, which could have
  caused problems
- Invoking menus using Alt-key mnemonics would insert the mnemonic
  character into the buffer on JDK 1.4
- Fixed long-standing bug in scroll-to-caret code
- C+. and C+, didn't set the history model of the search bar
- Possible fix for jEdit hanging on JDK 1.4 when file modified on disk
  by another program

+ API Changes
